--- a/appgeoMapas/package.json
+++ b/appgeoMapas/package.json
@@ -16,7 +16,10 @@
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "^2.25.0",
-    "react-native-maps": "1.18.0"
+    "react-native-get-random-values": "^1.11.0",
+    "react-native-google-places-autocomplete": "^2.5.7",
+    "react-native-maps": "1.18.0",
+    "react-native-maps-directions": "^1.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
