--- a/appUploadImage/package.json
+++ b/appUploadImage/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "expo": "~53.0.20",
+    "expo-image-picker": "^16.1.4",
     "expo-status-bar": "~2.2.3",
+    "node": "^22.18.0",
     "react": "19.0.0",
     "react-native": "0.79.5"
   },
